--- a/templates/account/dashboard_guide.html
+++ b/templates/account/dashboard_guide.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="guide_progress_content">
                     <div class="tab-content">
-                        <img id="caution-image" src="/static/img/guide.png">
+                        <img id="caution-image" src="{% static 'img/guide.png' %}">
                         <ul id="caution-ul" >
                             <li>
                                 <div class="caution-div-each">
