--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -128,13 +128,13 @@
                                     </ul>
                                     <div class="table_product btn" >
                                         <button class="show_detail_btn first" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -313,7 +313,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" >
@@ -327,7 +327,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -502,7 +502,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" >
@@ -516,7 +516,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -669,7 +669,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" style="width:75px; font-size:11px; margin-right:3px;">
@@ -683,7 +683,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -836,7 +836,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn third" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" style="width:75px; font-size:11px; margin-right:3px;">
@@ -938,7 +938,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -1075,13 +1075,13 @@
                                 </ul>
                                 <div class="table_product btn detail" >
                                     <button class="show_detail_btn first" aria-hidden="true">
-                                        <img src="/static/img/downward_arrow.png"/>
+                                        <img src="{% static 'img/downward_arrow.png' %}"/>
                                     </button>
                                 </div>
                                 <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                     <div class="table_product_detail_left">
                                         <div class="circle-wrapper">
-                                            <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                            <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                             <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
@@ -1199,13 +1199,13 @@
                                 </ul>
                                 <div class="table_product btn detail" >
                                     <button class="show_detail_btn first" aria-hidden="true">
-                                        <img src="/static/img/downward_arrow.png"/>
+                                        <img src="{% static 'img/downward_arrow.png' %}"/>
                                     </button>
                                 </div>
                                 <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                     <div class="table_product_detail_left">
                                         <div class="circle-wrapper">
-                                            <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                            <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                             <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
