--- a/templates/account/transaction_details.html
+++ b/templates/account/transaction_details.html
@@ -47,7 +47,7 @@
                 </td>
                 <td class="transaction_detail_content right">
                     이수지 (인)
-                    <img src="/static/img/stamp.png">
+                    <img src="{% static 'img/stamp.png' %}">
                 </td>
             </tr>
             <tr>
