--- a/templates/home.html
+++ b/templates/home.html
@@ -270,7 +270,7 @@
                                         {{product.oneline_intro}}
                                     </div>
                                     <div class="circle-wrapper">
-                                        <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                        <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                         <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
@@ -378,7 +378,7 @@
                                         {{product.oneline_intro}}
                                     </div>
                                     <div class="circle-wrapper">
-                                        <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                        <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                         <ul class="circle">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
