--- a/templates/message/message_room.html
+++ b/templates/message/message_room.html
@@ -19,7 +19,7 @@
         </div>
         <div class="message_notice_wrapper">
             <div class="message_notice_title">
-                <img style="width:30px; vertical-align: bottom;" src="/static/img/message_notice.png"/>
+                <img style="width:30px; vertical-align: bottom;" src="{% static 'img/message_notice.png' %}"/>
                 포스팅 작성 전 주의사항
             </div>
             <div class="message_notice_content">
@@ -34,7 +34,7 @@
             <div class="message_popup_title">인플루언서님께서 사용하고 있는 개인 배너나 문구가 없다면 소셜업 배너를 사용해주세요.</div>
             <div class="message_popup_explain">
                 <div class="message_popup_logo">
-                    <img src="/static/img/logo.png"/>
+                    <img src="{% static 'img/logo.png' %}"/>
                 </div>
                 <div class="message_popup_detail">
                     본 포스팅은 소셜업을 통해 업체로부터<br/>
