--- a/templates/search.html
+++ b/templates/search.html
@@ -118,7 +118,7 @@
                                         {{product.oneline_intro}}
                                     </div>
                                     <div class="circle-wrapper">
-                                        <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                        <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                         <ul class="circle">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
@@ -198,7 +198,7 @@
                                         {{product.oneline_intro}}
                                     </div>
                                     <div class="circle-wrapper">
-                                        <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                        <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                         <ul class="circle">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
