--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -101,13 +101,13 @@
                                     </ul>
                                     <div class="table_product btn" >
                                         <button class="show_detail_btn first" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -309,7 +309,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" >
@@ -323,7 +323,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -519,7 +519,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" >
@@ -533,7 +533,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -707,7 +707,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" style="width:75px; font-size:11px; margin-right:3px;">
@@ -720,7 +720,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -846,7 +846,7 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn second" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_btn change" style="width:75px; font-size:11px; margin-right:3px;">
@@ -859,7 +859,7 @@
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -986,13 +986,13 @@
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn first" aria-hidden="true">
-                                            <img src="/static/img/downward_arrow.png"/>
+                                            <img src="{% static 'img/downward_arrow.png' %}"/>
                                         </button>
                                     </div>
                                     <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
-                                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                                 <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
@@ -1105,13 +1105,13 @@
                                 </ul>
                                 <div class="table_product btn detail" >
                                     <button class="show_detail_btn first" aria-hidden="true">
-                                        <img src="/static/img/downward_arrow.png"/>
+                                        <img src="{% static 'img/downward_arrow.png' %}"/>
                                     </button>
                                 </div>
                                 <div class="table_product_detail" data-type="{{ order_item.cart_item.item.sns_type }}" data-color="{{ order_item.cart_item.item.sns_type_color }}">
                                     <div class="table_product_detail_left">
                                         <div class="circle-wrapper">
-                                            <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                            <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                             <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
