--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -144,7 +144,7 @@
                                             {{product.oneline_intro}}
                                         </div>
                                         <div class="circle-wrapper">
-                                            <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                            <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                             <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
