--- a/templates/account/dashboard_question.html
+++ b/templates/account/dashboard_question.html
@@ -36,7 +36,7 @@
             <div class="question_content seller">
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">판매 수익금은 언제 포인트로 들어오나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">판매 수익금 출금은 어떻게 할 수 있나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">서비스 등록을 하면 언제 승인이 나나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">서비스 등록 후 구매자(광고주)가 생기면 어떻게 알 수 있나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">서비스 정렬 기준은 어떻게 되나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">포스팅 서비스 판매는 어떻게 할 수 있나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">소셜업 게이지는 어떻게 산출되나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -108,7 +108,7 @@
             <div class="question_content purchase">
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">소셜업 게이지는 무엇인가요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">구매를 하면 판매자가 즉시 알 수 있나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">주문취소는 언제까지 할 수 있나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">구매 전에 판매자의 SNS를 볼 수 없나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">포인트 충전에 대해 세금계산서 발급이 가능한가요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">소셜업이 서비스에 대한 세금계산서를 발행해주나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">판매자가 직거래를 원할 땐 어떻게 해야 하나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">구매확정이란 무엇인가요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -190,7 +190,7 @@
             <div class="question_content usage">
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">소셜업이란 어떤 서비스인가요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="question_content_each small">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">고객 상담 시간은 언제인가요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="question_content_each small">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">탈퇴는 어디서 하나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="question_content_each small">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">구매, 판매 관련된 알림 이메일, 문자가 안와요.</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="question_content_each small">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">비밀번호가 기억이 안나요.</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="question_content_each large">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">휴대폰 인증번호가 오질 않아요.</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -252,7 +252,7 @@
             <div class="question_content report">
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">판매자가 직거래를 유도하면 신고해야 하나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
-                        <img src="/static/img/search.png">
+                        <img src="{% static 'img/search.png' %}">
                         <div class="question-content-title">신고하기를 받으면 어떻게 되나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
