--- a/templates/account/email/password_reset_key_message.html
+++ b/templates/account/email/password_reset_key_message.html
@@ -13,7 +13,7 @@
             <table border="0" cellpadding="20" cellspacing="0" width="600">
                 <tr>
                     <td>
-                        <img src="/static/img/newsletter.png">
+                        <img src="{% static 'img/newsletter.png' %}">
                     </td>
                 </tr>
             </table>
