--- a/templates/product/product_edit.html
+++ b/templates/product/product_edit.html
@@ -182,8 +182,8 @@
                     <div class="tag_wrapper">
                     {{ choice.tag }}
                     <label for="id_tag_{{ forloop.counter0 }}">
-                        <img class="tag_image_before_click" src="/static/img/{{ choice.choice_value }}.png">
-                        <img class="tag_image_clicked" src="/static/img/{{ choice.choice_value }}_click.png">
+                        <img class="tag_image_before_click" src="{% static 'img/' %}{{ choice.choice_value }}.png">
+                        <img class="tag_image_clicked" src="{% static 'img/' %}{{ choice.choice_value }}_click.png">
                         {{ choice.choice_label }}
                     </label>
                         </div>
