--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -89,7 +89,7 @@
                     <div class="item_top">
                         <div class="item_top_image" data-color="{{ item.sns_type_color }}">
                             <div class="circle-wrapper">
-                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
                                 <ul class="circle" gauge-data="{{ item.socialup_gauge }}">
                                     <li class="circle-list">
                                         <div class="circle-text">1</div>
@@ -136,7 +136,7 @@
                         <div class="item_top_btns">
                             <div class="item_top_btns_content btn">
                                 <form action="{% url 'product_change' item.id %}">
-                                    <input class="product_btn edit" type="image" src="/static/img/edit.png">
+                                    <input class="product_btn edit" type="image" src="{% static 'img/edit.png' %}">
                                 </form>
                                 <div class="delete-confirm-modal">
                                         <div class="delete-confirm-modal-title">상품삭제</div>
@@ -149,7 +149,7 @@
                                         </div>
                                     </div>
                                 <form id="product_delete_form" action="{% url 'product_delete' item.id %}">
-                                    <img class="product_btn delete" src="/static/img/cancle.png">
+                                    <img class="product_btn delete" src="{% static 'img/cancle.png' %}">
                                 </form>
                             </div>
                             <div class="item_top_btns_content status">
