message notice img change

--- a/static/css/message.css
+++ b/static/css/message.css
@@ -404,6 +404,7 @@ label.chat-input-file.file-upload {
 	margin-left:2%;
 	margin-bottom:10px;
 	background-color: rgba(242, 242, 242, 0.49);
+	padding-bottom: 5px;
 }
 
 .message_notice_wrapper .message_notice_title{
@@ -431,7 +432,7 @@ label.chat-input-file.file-upload {
 	position:absolute;
 	display: none;
 	width:500px;
-	height:220px;
+	height:275px;
 	margin-left:62px;
 	margin-top:-10px;
 	background-color: white;
@@ -448,29 +449,14 @@ label.chat-input-file.file-upload {
 }
 
 .message_popup_wrapper .message_popup_explain{
-	width:94%;
-	height:27%;
-	border: 1px solid #a3a3a3;
+	width:95%;
+	height:auto;
+	margin-top:10px;
 	margin-left:3%
 }
 
-.message_popup_wrapper .message_popup_explain .message_popup_logo{
-	width:45%;
-	height:100%;
-	display: inline-block;
-	vertical-align: sub;
-	border-right: 1px solid #a3a3a3;
-}
-
-.message_popup_wrapper .message_popup_explain .message_popup_logo img{
-	width:90%;
-}
-
-.message_popup_wrapper .message_popup_explain .message_popup_detail {
-	width:53%;
-	height:100%;
-	display: inline-block;
-	font-size: 14px;
+.message_popup_wrapper .message_popup_explain img{
+	width:100%;
 }
 
 .message_popup_wrapper .message_popup_text{
