--- a/templates/message/message_room.html
+++ b/templates/message/message_room.html
@@ -33,20 +33,12 @@
         <div class="message_popup_wrapper">
             <div class="message_popup_title">인플루언서님께서 사용하고 있는 개인 배너나 문구가 없다면 소셜업 배너를 사용해주세요.</div>
             <div class="message_popup_explain">
-                <div class="message_popup_logo">
-                    <img src="{% static 'img/logo.png' %}"/>
-                </div>
-                <div class="message_popup_detail">
-                    본 포스팅은 소셜업을 통해 업체로부터<br/>
-                    경제적 대가를 받고 작성한 포스팅입니다.
-                </div>
+                <img src="{% static 'img/notice_banner.png' %}"/>
             </div>
-            <div class="message_popup_text">&lt;a href="https;//socialup.kr/81521" target="_blank">
-                <br/>
-                -> 추후 소스 수정
+            <div class="message_popup_text">&lt;img src="https://social-up.s3.ap-northeast-2.amazonaws.com/static/img/notice_banner.png"/>
             </div>
             <div class="message_popup_btns">
-                <button class="message_popup_btn copy" id="copy_button" data-clipboard-text='<a href="https;//socialup.kr/81521" target="_blank">'>소스복사</button>
+                <button class="message_popup_btn copy" id="copy_button" data-clipboard-text='<img src="https://social-up.s3.ap-northeast-2.amazonaws.com/static/img/notice_banner.png"/>'>소스복사</button>
                 <button class="message_popup_btn close">닫기</button>
             </div>
         </div>
