--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -1,20 +1,20 @@
 .detail_wrapper{
     width:90%;
-    height:800px;
+    height:auto;
     margin-left:5%;
     margin-top:3%;
     padding-top:10%;
-    background: -webkit-linear-gradient(#e8e8e8 25%, white 0);
-    background: -moz-linear-gradient(#e8e8e8 25%, white 0);
-    background: -ms-linear-gradient(#e8e8e8 25%, white 0);
-    background: linear-gradient(#e8e8e8 25%, white 0);
+    background: -webkit-linear-gradient(#e8e8e8 21%, white 0);
+    background: -moz-linear-gradient(#e8e8e8 21%, white 0);
+    background: -ms-linear-gradient(#e8e8e8 21%, white 0);
+    background: linear-gradient(#e8e8e8 21%, white 0);
 }
 
 .detail_content_wrapper{
     position:relative;
     left:20%;
     width:60%;
-    height:100%;
+    height:auto;
 }
 
 .detail_content_wrapper_top{
@@ -138,6 +138,7 @@
 .detail_content_wrapper_mid{
     width:100%;
     height:33%;
+    margin-bottom: 90px;
 }
 
 .detail_content_wrapper_mid .detail_content_mid_left{
@@ -220,7 +221,7 @@
 .detail_content_wrapper_bot .seller_products_wrapper{
     width:100%;
     border:1px solid #e8e8e8;
-    height:100%;
+    padding-bottom: 30px;
 }
 
 .detail_content_wrapper_bot .seller_products_wrapper .seller_products_title{
@@ -426,7 +427,7 @@
 }
 
 .seller_products_each_wrapper .row {
-    height: 330px;
+    height: 191px;
     margin-top:15px;
 }
 
